--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^3.2.37",
+    "vue-banner-better": "^1.3.0",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
   },
